# etheria-downloader

./: Cargo.toml  README.md
.github/workflows/: etheria-downloader.yml  rust.yml
assets/: live_patch_version_2846214.json  version_files_309402.json
src/: lib.rs  main.rs  tests.rs
