[package]
name = "etheria-downloader"
version = "0.7.0"
authors = ["Alvin Null <supdrewin@outlook.com>"]
edition = "2021"
description = "Etheria Downloader written in Rust"
repository = "https://github.com/supdrewin/etheria-downloader/"
license = "MIT"

[dependencies]
console = "0.15"
futures-util = "0.3"
indicatif = { git = "https://github.com/console-rs/indicatif" }
md-5 = "0.10"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
wuwa-dl = { git = "https://github.com/supdrewin/wuwa-downloader" }
wuwa-macro-derive = { git = "https://github.com/supdrewin/wuwa-downloader" }
